--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@types/swagger-stats": "^0.95.11",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
